# ElGarrobo

./: .gitignore  .gitmodules  Comandos.json  Comandos.md  ElGatoALSW.py  EmularTeclado.py  Guia_Instalacion.md  Instalar.md  Makefile  MiMQTT.py  MiWebSoket.py  OBSWebSocketPropio.py  README.md  Read.md  Server.py  ejecutar_elGarrobo.sh  elgato.sh  pyproject.toml  requiraments.txt  requirements.txt  setup.py
Extra/: Acciones.py  ApiYoutube.py  CargarData.py  Delay.py  Depuracion.py  ElGatito.py  EmularTeclado.py  FuncionesArchivos.py  FuncionesBlender.py  FuncionesLogging.py  FuncionesOBS.py  FuncionesProyecto.py  MiCharBot.py  MiDeck.py  MiDeckImagen.py  MiMQTT.py  MiOBS.py  MiOS.py  MiStreanDeck.py  MiTecladoMacro.py  News.py  OBSWebSocketPropio.py  SalvarProyecto.py  Sonidos.py  SubProceso.py  TecladoMacro.py  YoutubeChat.py
OBSCambiadorNode/: CambiadorOBS.js
OBSNode/: OBSNode.js  package-lock.json  package.json
Recursos/: Comando.json  Deck.json  StreamDeck.json  Teclado.json  Teclados.json  TelegramBot.json  hander.json  nega.json
ServerPy/: Server.py
acciones/: Archivos.py  Sonidos.py  Ventanas.py  __init__.py  accion_os.py  delay.py  emular_teclado.py  notificacion.py  operaciones.py  sonidos.py
docs/: conf.py  configurar.rst  elGarobo.acciones.rst  elGarobo.accionesOOP.heramientas.rst  elGarobo.accionesOOP.rst  elGarobo.dispositivos.mideck.rst  elGarobo.dispositivos.mimqtt.rst  elGarobo.dispositivos.mipedal.rst  elGarobo.dispositivos.miteclado.rst  elGarobo.dispositivos.rst  elGarobo.miLibrerias.rst  elGarobo.modulos.rst  elGarobo.rst  index.rst  (+1 more)
(+235 files in other folders)
